--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -27,8 +27,12 @@
 		padding: 0px 15px;
 		margin: 0;
 	}
+	nav .link-wrap li:first-child {
+		padding-left: 50px;
+	}
 	.profile {
 		width: 100%;
+		height: 350px;
 	}
 	.single-blog {
 		padding-bottom: 50px;
